package | add "tabular data" to the list of keywords

--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 ]
 dynamic = ["version", "description"]
 keywords = [
-    "artificial intelligence", "deep learning", "library", "python", "pytorch", "torch", "tabular"
+    "artificial intelligence", "deep learning", "library", "python", "pytorch", "torch", "tabular", "tabular data"
 ]
 license = {file = "LICENSE"}
 name = "paper_tabular_dl_revisiting_models"
